--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
 
       <div class="col-md-4 text-center mt25">
         {% if site.built-by %}
-        <a target="_blank" href="http://laura.rochaprado.com"><img src="https://img.shields.io/badge/Built%20by-webjeda-blue.svg" alt="{{site.built-by}}"></a>
+        <a target="_blank" href="http://laura.rochaprado.com"></a>
         {% endif %}
       </div>
       <div class="col-md-4 text-center mt25">
