--- a/_includes/contactform.html
+++ b/_includes/contactform.html
@@ -2,8 +2,6 @@
   var submitted = false;
 </script>
 
-<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location=" https://biodivinfo.github.io/sobre ";}"></iframe>
-
 <form class="form" action="https://docs.google.com/forms/u/2/d/e/1FAIpQLScE3wtKjNC-k9QfYtAjhSZB1lSuvhxPPysmOuktqG9aw4FNDg/formResponse">
 
   <label>Nome Completo</label>
@@ -17,4 +15,21 @@
 
   <input type="submit" value="Send" />
 
+</form>
+
+<form>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <div class="form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
 </form>
