--- a/_includes/contactform.html
+++ b/_includes/contactform.html
@@ -3,33 +3,17 @@
 </script>
 
 <form class="form" action="https://docs.google.com/forms/u/2/d/e/1FAIpQLScE3wtKjNC-k9QfYtAjhSZB1lSuvhxPPysmOuktqG9aw4FNDg/formResponse">
-
-  <label>Nome Completo</label>
-  <input name="entry.1120708310" type="text" />
-
-  <label>Email</label>
-  <input name="entry.245839524" type="email" required />
-
-  <label>Mensagem</label>
-  <textarea name="entry.1158159828" type="" required></textarea>
-
-  <input type="submit" value="Send" />
-
-</form>
-
-<form>
   <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    <label>Email</label>
+    <input type="email" name="entry.245839524" class="form-control" required placeholder="Seu endereço de e-mail" />
   </div>
   <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    <label>Nome Completo</label>
+    <input type="text" name="entry.1120708310" class="form-control" />
   </div>
-  <div class="form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+  <div class="form-group">
+    <label>Mensagem</label>
+    <textarea name="entry.1158159828" class="form-control" rows="6" required></textarea>
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <input type="submit" class="btn btn-primary" value="Enviar" />
 </form>
