--- a/_includes/contactform.html
+++ b/_includes/contactform.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
   var submitted = false;
 </script>
-<script type="text/javascript">
+<!-- <script type="text/javascript">
   var load = 0;
 
   document.getElementById('gform').onload = function() {
@@ -12,7 +12,7 @@
       document.location = "https://biodivinfo.github.io/sobre/";
     }
   }
-</script>
+</script> -->
 
 <form id="gform" class="form" action="https://docs.google.com/forms/u/2/d/e/1FAIpQLScE3wtKjNC-k9QfYtAjhSZB1lSuvhxPPysmOuktqG9aw4FNDg/formResponse">
   <div class="form-group">
