tenta redirecionar formulário

--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -5,9 +5,12 @@ layout: compress
 <!DOCTYPE html>
 <html>
 
-  {% include headcontact.html %}
-
+  {% include head.html %}
   <body>
+    <script type="text/javascript">
+    var submitted = false;
+    </script>
+
 
     {% include header.html %}
 
