--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer style="margin-top: 2em;">
   <div class="container">
     <div class="row p20">
       {% if site.copyright.name %}
