adiciona placeholders no formulário de contato

--- a/_includes/contactform.html
+++ b/_includes/contactform.html
@@ -5,11 +5,11 @@
   </div>
   <div class="form-group">
     <label>Nome Completo</label>
-    <input type="text" name="entry.1120708310" class="form-control" />
+    <input type="text" name="entry.1120708310" class="form-control" placeholder="Seu nome completo" />
   </div>
   <div class="form-group">
     <label>Mensagem</label>
-    <textarea name="entry.1158159828" class="form-control" rows="6" required></textarea>
+    <textarea name="entry.1158159828" class="form-control" rows="6" required placeholder="Sua mensagem"></textarea>
   </div>
   <input type="submit" class="btn btn-primary" value="Enviar" />
 </form>
